--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,213 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+
+body{
+  background-color: #f8eed8;
+  font-family: 'Poppins', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header{
+  width: 90%;
+  margin: auto;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  padding-top: 40px;
+  padding-bottom: 20px;
+}
+
+
+.banner{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+align-items: center;
+margin-top: 20px;
+font-size: 2rem;
+text-transform: uppercase;
+padding-top: 40px;
+
+}
+.banner-line{
+  height: 1px;
+  width: 100%;
+  background-color: rgb(165, 161, 161);
+  flex:1;
+}
+.banner h2{
+  letter-spacing: 2px;
+}
+.banner-nav{
+  width: 90%;
+  margin: auto;
+  display: flex;
+  justify-content:flex-start;
+  align-items: center;
+  padding-top: 40px;
+}
+.banner-nav input{
+  margin-right: 10%;
+  background: transparent;
+  outline: none;
+  border: none;
+  font-size: 1.2rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: rgb(95, 91, 91);
+
+}
+.box-container{
+  width: 90%;
+  margin: auto;
+  padding-top: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 50px;
+}
+.box{
+  width: 40%;
+  max-width: 500px;
+}
+.box img{
+  width: 500px;
+}
+.loading{
+  display: flex;
+ justify-content: center;
+ align-items: center;
+ padding-top: 40px;
+}
+.lds-ellipsis {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ellipsis div {
+  position: absolute;
+  top: 33px;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background: black;
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+.lds-ellipsis div:nth-child(1) {
+  left: 8px;
+  animation: lds-ellipsis1 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(2) {
+  left: 8px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(3) {
+  left: 32px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(4) {
+  left: 56px;
+  animation: lds-ellipsis3 0.6s infinite;
+}
+@keyframes lds-ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes lds-ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(24px, 0);
+  }
 }
 
-.App-link {
-  color: #61dafb;
+.banner-heading{
+  width: 90%;
+  margin: auto;
+  padding-top: 40px;
+}
+.banner-heading h1{
+  padding-top: 20px;
+  font-size: 2.2rem;
+  letter-spacing: 2px;
+}
+.banner-nav img{
+  height:25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.banner-nav .search{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.banner-nav .categories{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style-type: none;
+  width: 90%;
+}
+.banner-nav .categories p{
+margin-right: 5%;
+font-size: 20px;
+font-weight: 600;
+text-transform: uppercase;
+letter-spacing: 1.5px;
+cursor: pointer;
+color: rgb(114, 108, 108);
+}
+.banner-nav .categories p .selected{
+  color: black;
+}
+.banner-nav .categories p:hover{
+  color: black;
+}
+.btn button{
+  
+  background: transparent;
+  outline: none;
+  padding: 10px 20px;
+  font-size: 1rem;
+  font-weight: 600;
+ box-shadow: 2px 2px;
+}
+.heading{
+  font-size: 1.2rem;
+}
+
+
+
+@media only screen and (max-width: 1250px) {
+ .banner-nav .categories{
+  display: none;
+ }
+ .box{
+  width: 100%;
+  max-width: 100%;
+ }
+ .box img{
+  max-width: 100%;
+  width: 100%;
+ }
 }
